[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "open_llm_gateway"
version = "0.1.1"
authors = [
  { name="Dmitry Sergeev", email="dmitry@ottic.ai" },
]
dynamic = []
description = "A Gateway for LLM API interactions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "docstring_parser>=0.15"
]

[project.urls]
Homepage = "https://github.com/ottic-ai/llm-gateway-python"
Issues = "https://github.com/ottic-ai/llm-gateway-python/issues"
